--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ networkx>=3.0
 dimod>=0.12.0
 dwave-system>=1.20.0
 dwave-neal>=0.5.9
+
+# AI/ML Dependencies
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+torch>=2.0.0
+transformers>=4.30.0
+shap>=0.42.0
